fix: dark mode fix, incorrect order of words (#1248)

--- a/tokens/scss/scania/color-dark.scss
+++ b/tokens/scss/scania/color-dark.scss
@@ -2,8 +2,8 @@
  * Do not edit directly, this file was auto-generated.
  */
 
-.tds-dark-mode,
-.scania .tds-dark-mode {
+.tds-mode-dark,
+.scania .tds-mode-dark {
   --color-background-base: var(--scania-color-grey-950);
   --color-background-accent-primary-default: var(--scania-color-blue-400);
   --color-background-accent-primary-disabled: var(--scania-color-grey-850);
